--- a/css/utilities.css
+++ b/css/utilities.css
@@ -47,69 +47,62 @@ a.icon-link:hover {
   text-decoration: underline;
 }
 
-/* SD Menu Styling */
-div.sdmenu {
-	width: 185px;
-	font-family: Arial,sans-serif;
-	font-size: 12px;
-	padding-bottom: 10px;
-	background: url(../assets/sdmenu/bottom.gif) no-repeat right bottom;
-	color: #FFFFFF;
+ /* The Overlay (background) */
+.overlay {
+  /* Height & width depends on how you want to reveal the overlay (see JS below) */   
+  height: 100%;
+  width: 0;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  background-color: rgb(0,0,0); /* Black fallback color */
+  background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
 }
 
-div.sdmenu div {
-	background: url(../assets/sdmenu/toptitle.gif) no-repeat;
-	overflow: hidden;
+/* Position the content inside the overlay */
+.overlay-content {
+  position: relative;
+  top: 25%; /* 25% from the top */
+  width: 100%; /* 100% width */
+  text-align: left; /* Centered text/links */
+  margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
 }
 
-div.sdmenu div:first-child {
-	background: url(../assets/sdmenu/toptitle.gif) no-repeat;
+/* The navigation links inside the overlay */
+.overlay a, p {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block; /* Display block instead of inline */
+  transition: 0.3s; /* Transition effects on hover (color) */
 }
 
-div.sdmenu div.collapsed {
-	height: 25px;
+/* When you mouse over the navigation links, change their color */
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
 }
 
-div.sdmenu div span {
-	display: block;
-	padding: 5px 25px;
-	font-weight: bold;
-	background: url(../assets/sdmenu/expanded.gif) no-repeat 10px center;
-	cursor: default;
-	border-bottom: 1px solid #ddd;
+/* Position the close button (top right corner) */
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
 }
 
-div.sdmenu div.collapsed span {
-	background-image: url(../assets/sdmenu/collapsed.gif);
-}
-
-div.sdmenu div a {
-	padding: 5px 10px;
-	background: #E1F0E4;
-	display: block;
-	border-bottom: 1px solid #ddd;
-	color: #000000;
-}
-
-div.sdmenu div a.current {
-	background: #0B5BA1;
-	color: #FFFFFF;
-}
-
-div.sdmenu div a:hover {
-	background: #0B5BA1;
-	text-decoration: none;
-	color: #FFFFFF;
-}
-
-/* Small devices (portrait tablets and large phones, 800px and below) */
-@media only screen and (max-width: 800px) {
-  .navbar {
-    padding: 20px 20px;
-    background-color: #CCCCCC;
+/* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
   }
-}
-
+} 
 
 /* Button Styling */
 
