--- a/css/layout.css
+++ b/css/layout.css
@@ -1,11 +1,4 @@
-<html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
-    <link rel="alternate stylesheet" type="text/css" href="resource://gre-resources/plaintext.css"
-      title="Wrap Long Lines">
-  </head>
-  <body>
-    <pre>* {
+* {
   box-sizing: border-box;
 }
 
@@ -228,9 +221,3 @@ HR {
     max-width: 100%;
   }
 }
-
-
-
-</pre>
-  </body>
-</html>
