--- a/css/layout.css
+++ b/css/layout.css
@@ -111,7 +111,7 @@ HR {
 
     .project-image {
       width: 100%;
-      height: 400px;
+      /*height: 400px;*/
       object-fit: cover;
       object-position: center;
     }
@@ -178,28 +178,28 @@ HR {
 /* Extra Extra large devices (large laptops and desktops, 1200px and below) */
 @media only screen and (max-width: 1600px) {
   #main-content {
-    margin: 125px 275px;
+    /*margin: 125px 275px;*/
   }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and below) */
 @media only screen and (max-width: 1200px) {
   #main-content {
-    margin: 125px 175px;
+    /*margin: 125px 175px;*/
   }
 }
 
 /* Large devices (laptops/desktops, 1000px and below) */
 @media only screen and (max-width: 1000px) {
   #main-content {
-    margin: 125px 75px;
+    /*margin: 125px 75px;*/
   }
 }
 
 /* Small devices (portrait tablets and large phones, 800px and below) */
 @media only screen and (max-width: 800px) {
   #main-content {
-    margin: 125px 50px;
+    /*margin: 125px 50px;*/
   }
 
   #portfolio-header {
@@ -214,7 +214,7 @@ HR {
 /* Small devices (portrait tablets and large phones, 600px and below) */
 @media only screen and (max-width: 600px) {
   #main-content {
-    margin: 125px 20px;
+    /*margin: 125px 20px;*/
   }
 
   .project-card {
