--- a/css/utilities.css
+++ b/css/utilities.css
@@ -28,7 +28,7 @@ a.icon-link:hover {
 
 .navbar {
   width: 100%;
-  padding: 30px 50px;
+  padding: 20px;
   background-color: #CCCCCC;
   display: flex;
   justify-content: space-between;
