--- a/css/utilities.css
+++ b/css/utilities.css
@@ -108,13 +108,15 @@ a.icon-link:hover {
 
 a.button {
   padding: 8px 16px;
+  width: fit-content;
   border: 3px solid #141414;
-  border-radius: 50px;
+  border-radius: 25px;
   color: black;
   text-decoration: none;
   display: flex;
   gap: 5px;
   align-items: center;
+  justify-content: center;
 }
 
 a.button:hover {
